<resources>
    <string name="app_name">Mental Math</string>
    <string name="hint_for_result">enter result here</string>
    <string name="ok">OK</string>
    <string name="start">START</string>
    <string name="pause">PAUSE</string>
    <string name="rightButtonText">right</string>
    <string name="wrongButtonText">wrong</string>
    <string name="right">Right!</string>
    <string name="wrong">Wrong!</string>
    <string name="initTime" translatable="false">00:00:00</string>
    <string name="rightAnswers" formatted="false">Right answers: %d/%d\n</string>
    <string name="totalTimeFormat" formatted="false">"Total time:        %s\n"</string>
    <string name="averageTimeFormat" formatted="false">"Average time:   %s\n"</string>
    <string name="stopwatchFormat" formatted="false" translatable="false">%d:%02d</string>
    <string name="noRightAnswers">There are no right answers</string>
    <string name="equations">Equations</string>
    <string name="arithmetic">Ariphmetic operations</string>
    <string name="matrix">Operations with matrix</string>
    <string name="multi_equation">Equation with multiple variables</string>
    <string name="polynomial">Operations with polynomials</string>
    <string name="addition">addition</string>
    <string name="subtraction">subtraction</string>
    <string name="multiplication">multiplication</string>
    <string name="division">division</string>
    <string name="setOptions">OPTIONS</string>
    <string name="isntSet">Settings for current training isn\'t set yet. Press OPTIONS button to tune training.</string>
    <string name="displayingSettingsFormat" translatable="false">"%1$-12s"</string>
    <string name="currentSettings">"Current settings:\n"</string>
    <string name="kind">"Kind:"</string>
    <string name="type">"Type:"</string>
    <string name="amount">"Amount:"</string>
    <string name="visibility">"Visibility:"</string>
    <string name="format">"Format:"</string>
    <string name="honestMode">"Honest:"</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="stopwatchMode">"Stopwatch:"</string>
    <string name="visible">visible</string>
    <string name="notVisible">not visible</string>
    <string name="dividend">Dividend</string>
    <string name="divisor">Divisor</string>
    <string name="reminderMode">Reminder:</string>
    <string name="noanswer">No answer</string>
    <string name="right_result_format" formatted="false">"Your:  %s\nRight: %s"</string>
    <string name="right_answer_format">"Right: %s"</string>
    <string name="your">"Your:  "</string>
    <string name="your_result">Your result:</string>
    <string name="your_reminder">Your reminder:</string>
    <string name="counterFormat" formatted="false" translatable="false">"%s/ %s/ %s"</string>
    <string name="exampleResultFormat" formatted="false" translatable="false">"%d:     %s     %s"</string>
    <string name="trainingNumber">Number of examples</string>
    <string name="trainingNumberSummary">Number of examples per training set</string>
    <string name="amountListDialogTitle">Amount:</string>
    <string name="num1" translatable="false">"1"</string>
    <string name="num2" translatable="false">"2"</string>
    <string name="num3" translatable="false">"3"</string>
    <string name="num4" translatable="false">"4"</string>
    <string name="num5" translatable="false">"5"</string>
    <string name="num6" translatable="false">"6"</string>
    <string name="num7" translatable="false">"7"</string>
    <string name="num8" translatable="false">"8"</string>
    <string name="num9" translatable="false">"9"</string>
    <string name="num10" translatable="false">"10"</string>
    <string name="num11" translatable="false">"11"</string>
    <string name="num12" translatable="false">"12"</string>
    <string name="num13" translatable="false">"13"</string>
    <string name="num14" translatable="false">"14"</string>
    <string name="num15" translatable="false">"15"</string>
    <string name="num16" translatable="false">"16"</string>
    <string name="num17" translatable="false">"17"</string>
    <string name="num18" translatable="false">"18"</string>
    <string name="num19" translatable="false">"19"</string>
    <string name="num20" translatable="false">"20"</string>
    <string name="id1" translatable="false">"1"</string>
    <string name="id2" translatable="false">"2"</string>
    <string name="id3" translatable="false">"3"</string>
    <string name="id4" translatable="false">"4"</string>
    <string name="id5" translatable="false">"5"</string>
    <string name="id6" translatable="false">"6"</string>
    <string name="id7" translatable="false">"7"</string>
    <string name="id8" translatable="false">"8"</string>
    <string name="id9" translatable="false">"9"</string>
    <string name="id10" translatable="false">"10"</string>
    <string name="id11" translatable="false">"11"</string>
    <string name="id12" translatable="false">"12"</string>
    <string name="id13" translatable="false">"13"</string>
    <string name="id14" translatable="false">"14"</string>
    <string name="id15" translatable="false">"15"</string>
    <string name="id16" translatable="false">"16"</string>
    <string name="id17" translatable="false">"17"</string>
    <string name="id18" translatable="false">"18"</string>
    <string name="id19" translatable="false">"19"</string>
    <string name="id20" translatable="false">"20"</string>
    <string name="formatListTitle">Type of format</string>
    <string name="formatListSummary">Choose format of example: row or column.</string>
    <string name="formatListDialogTitle">Choose format:</string>
    <string name="formatAsRow">row</string>
    <string name="formatAsColumn">column</string>
    <string name="formatAsRowId" translatable="false">rowId</string>
    <string name="formatAsColumnId" translatable="false">columnId</string>
    <string name="visTimeListTitle">Time of example visibility</string>
    <string name="visTimeSummary">Less time more skills</string>
    <string name="visTimeDialogTitle">Choose time:</string>
    <string name="visTimeAlways">always</string>
    <string name="visTime30sec">30 sec</string>
    <string name="visTime20sec">20 sec</string>
    <string name="visTime15sec">15 sec</string>
    <string name="visTime12sec">12 sec</string>
    <string name="visTime10sec">10 sec</string>
    <string name="visTime8sec">8 sec</string>
    <string name="visTime6sec">6 sec</string>
    <string name="visTime4sec">4 sec</string>
    <string name="visTime3sec">3 sec</string>
    <string name="visTime2sec">2 sec</string>
    <string name="visTime1sec">1 sec</string>
    <string name="visTimeAlwaysId" translatable="false">always</string>
    <string name="visTime30secId" translatable="false">30sec</string>
    <string name="visTime20secId" translatable="false">20sec</string>
    <string name="visTime15secId" translatable="false">15sec</string>
    <string name="visTime12secId" translatable="false">12sec</string>
    <string name="visTime10secId" translatable="false">10sec</string>
    <string name="visTime8secId" translatable="false">8sec</string>
    <string name="visTime6secId" translatable="false">6sec</string>
    <string name="visTime4secid" translatable="false">4sec</string>
    <string name="visTime3secId" translatable="false">3sec</string>
    <string name="visTime2secId" translatable="false">2sec</string>
    <string name="visTime1secId" translatable="false">1sec</string>
    <string name="cbHonestModeTitle">Honest mode</string>
    <string name="cbHonestModeSummary">You don\'t type answer and save your time</string>
    <string name="cbShowStopwatchTitle">Stopwatch visibility</string>
    <string name="cbShowStopwatchSummary">Show stopwatch in training</string>
    <string name="additionQuantityKey" translatable="false">additionQuantity</string>
    <string name="additionFormatListKey" translatable="false">additionFormatList</string>
    <string name="additionVisTimeListKey" translatable="false">additionVisTimeList</string>
    <string name="additionCbHonestModeKey" translatable="false">additionCbHonestMode</string>
    <string name="additionCbShowStopwatchKey" translatable="false">additionCbShowStopwatch</string>
    <string name="additionRowFormat" translatable="false">%1$d + %2$d</string>
    <string name="additionColumnFormat" translatable="false">" %1$d +\n %2$d"</string>
    <string name="subtractionQuantityKey" translatable="false">subtractionQuantity</string>
    <string name="subtractionFormatListKey" translatable="false">subtractionFormatList</string>
    <string name="subtractionCbHonestModeKey" translatable="false">subtractionCbHonestMode</string>
    <string name="subtractionVisTimeListKey" translatable="false">subtractionVisTimeList</string>
    <string name="subtractionCbShowStopwatchKey" translatable="false">subtractionCbShowStopwatch</string>
    <string name="subtractionRowFormat" translatable="false">%1$d - %2$d</string>
    <string name="subtractionColumnFormat" translatable="false">" %1$d -\n %2$d"</string>
    <string name="multiplicationQuantityKey" translatable="false">multiplicationQuantity</string>
    <string name="multiplicationFormatListKey" translatable="false">multiplicationFormatList</string>
    <string name="multiplicationCbHonestModeKey" translatable="false">multiplicationCbHonestMode</string>
    <string name="multiplicationVisTimeListKey" translatable="false">multiplicationVisTimeList</string>
    <string name="multiplicationCbShowStopwatchKey" translatable="false">multiplicationCbShowStopwatch</string>
    <string name="multiplicationRowFormat" translatable="false">%1$d * %2$d</string>
    <string name="multiplicationColumnFormat" translatable="false">" %1$d *\n %2$d"</string>
    <string name="divisionQuantityKey" translatable="false">divisionQuantity</string>
    <string name="divisionFormatListKey" translatable="false">divisionFormatList</string>
    <string name="divisionCbHonestModeKey" translatable="false">divisionCbHonestMode</string>
    <string name="divisionVisTimeListKey" translatable="false">divisionVisTimeList</string>
    <string name="divisionCbShowStopwatchKey" translatable="false">divisionCbShowStopwatch</string>
    <string name="divisionRowFormat" translatable="false">%1$d : %2$d</string>
    <string name="subtractionKindListKey" translatable="false">subtractionKindList</string>
    <string name="subtractionKindDialogTitle">Kind of training</string>
    <string name="subtractionKindSummary">Choose a kind of training</string>
    <string name="subtractionKindTitle">Complexity</string>
    <string name="id_m5_5" translatable="false">1-5_m_1-5</string>
    <string name="multiplicationKindListKey" translatable="false">multiplicationKindList</string>
    <string name="multiplicationKindDialogTitle">Kind of training</string>
    <string name="multiplicationKindSummary">Choose a kind of training</string>
    <string name="multiplicationKindTitle">Complexity</string>
    <string name="id_x5_5" translatable="false">1-5_x_1-5</string>
    <string name="dividendRangeListKey" translatable="false">dividendRangeListKey</string>
    <string name="divisorRangeListKey" translatable="false">divisorRangeListKey</string>
    <string name="divisionCbWithReminderKey" translatable="false">divisionCbWithReminderKey</string>
    <string name="dividendKindDialogTitle">Range of dividend</string>
    <string name="dividendKindSummary">Choose a range of dividend</string>
    <string name="divisorKindDialogTitle">Range of divisor</string>
    <string name="divisorKindSummary">Choose a range of divisor</string>
    <string name="id_dividend_1_9" translatable="false">dividend_1-5</string>
    <string name="id_divisor_1_9" translatable="false">divisor_1-5</string>
    <string name="cbWithRemainderTitle">With reminder</string>
    <string name="cbWithRemainderSummary">Division with reminder</string>
</resources>