<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical">

        <Button
            android:id="@+id/arithmetic"
            style="@style/KindOfTrainButton"
            android:text="@string/arithmetic"/>


        <Button
            android:id="@+id/equations"
            style="@style/KindOfTrainButton"
            android:text="@string/equations"/>


        <Button
            android:id="@+id/matrix"
            style="@style/KindOfTrainButton"
            android:text="@string/matrix"/>

        <Button
            android:id="@+id/multi_equations"
            style="@style/KindOfTrainButton"
            android:text="@string/multi_equation"/>

        <Button
            android:id="@+id/polynomials"
            style="@style/KindOfTrainButton"
            android:text="@string/polynomial"/>

</LinearLayout>
