<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/addition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addition"
        android:onClick="launchTrain"/>

    <Button
        android:id="@+id/subtraction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtraction"
        android:onClick="launchTrain"/>

    <Button
        android:id="@+id/multiplication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiplication"
        android:onClick="launchTrain"/>

    <Button
        android:id="@+id/division"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/division"
        android:onClick="launchTrain"/>

</LinearLayout>